Ajout du get par category et maj swagger
